      noted the design "comparison A and B" so far.

  * netposet():
    - function works with a ranking matrix that contains missing
      elements, i.e., rankings that do not include all treatments

  * netgraph():
    - areas for multi-arm studies are printed at the correct locations
      if argument 'start.layout' is not equal to "circle" and argument
      'seq' defines a specific treatment order

 ** Internal changes **

  * chkmultiarm():
    - warning for zero treatment arm variance instead of an error

  * new internal function uppertri() to extract elements from the
    upper triangle of a matrix

  * new internal function treats() to abbreviate treatment names


*** netmeta, version 0.9-6, 2017-08-09 ***

 ** Major changes **

  * Prediction intervals can be calculated for treatment estimates
    from a network meta-analysis

  * In netmeta(), Q statistics for heterogeneity and design
    inconsistency are calculated according to Krahn et al. (2013);
    see help page of decomp.design()

  * In printouts and forest plots, the reference treatment can be
    considered as treatment of interest or comparator (default),
    i.e., either comparisons of reference vs other treatments or
    other treatments vs reference are reported

  * Tests for heterogeneity and design inconsistency are shown in
    printouts

  * A biplot can be generated to show partial ordering of treatment
    rankings for more than two outcomes

  * Additional checks implemented for multi-arm studies:
    - negative or zero treatment arm variances
    - duplicate treatment comparisons or incomplete sets of
      treatment comparisons within a study

 ** User-visible changes **

  * netmeta():
    - new arguments 'prediction' and 'level.predict' to calculate
      prediction intervals
    - list elements 'Q.heterogeneity' and 'Q.inconsistency' based on
      Krahn et al. (2013)
    - new list elements 'prediction', 'lower.predict',
      'upper.predict', 'df.Q.heterogeneity',