@@ -52,8 +52,11 @@ print.netmeta <- function(x,
     sm.lab <- paste("log", sm, sep = "")
   
   
-  treat1 <- treats(x$treat1, nchar.trts)
-  treat2 <- treats(x$treat2, nchar.trts)
+  trts <- rownames(x$TE.fixed)
+  trts.abbr <- treats(trts, nchar.trts)
+  ##
+  treat1 <- as.character(x$treat1, levels = trts, labels = trts.abbr)
+  treat2 <- as.character(x$treat2, levels = trts, labels = trts.abbr)
   ##
   if (any(treat1 != x$treat1) | any(treat2 != x$treat2))
     abbr <- c(treat1, treat2)
